# osas

./: Cargo.toml  LICENSE.md  README.md
assets/: 1.fa  foo.txt  keywords.txt  keywords1.txt  words.txt
src/: as.rs  bucket.rs  child.rs  hashes_test.rs  hm.rs  hm_try_4.rs  hm_try_5.rs  idk.rs  lib.rs  main.rs  pbst.rs  pval.rs
