[package]
name = "osas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
num = { version = "0.4.0", default-features = false }
num-bigint = { version = "0.4.3", features = ["rand"]}
avl = "0.6.2"