[package]
name = "osas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
avl = "0.6.2"
num = { version = "0.4.0", default-features = false }
num-traits = "0.2.15"
num-bigint = { version = "0.4.3", features = ["rand"] }
rand = "0.8.5"

num-primes = "0.3.0"